2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Add a ExecuteDeletionDirectives
	method.

	* WebServices.wsdl: Regenerated.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Move GetFullPath to the
	MonkeyWrench.Database assembly.

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Use TransmitFile when we have a file
	to transmit instead of sending the file manually.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.wsdl: Regenerated.

	* WebServices.asmx: Added ExecuteScheduler.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.wsdl: Regenerated.

	* WebServices.asmx: Add support for uploading compressed files.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Authentication.cs: Protect against a few NREs.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Download.aspx.cs: Add support for downloading workfiles
	by name.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx: Update according to DB API changes.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile: Create directory before trying to copy to it.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx.cs: Fix compilation.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx: Add a workaround for web services
	passing datetimes without time zone information around.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile: Make publish and install targets synonyms.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx:
	* WebServices.asmx.cs: Move code to cs file.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx: Add support for returning work for an
	entire revision to a builder.

	* WebServices.wsdl: Regenerated.

2009-07-15  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* WebServices.asmx: FindLatestWorkFileId: Fix compilation,