@@ -109,15 +109,38 @@ namespace MonkeyWrench.WebServices
 			}
 		}
 
+		private WebServiceLogin CreateLogin ()
+		{
+			WebServiceLogin login = new WebServiceLogin ();
+
+			login.Cookie = Request ["cookie"];
+			if (string.IsNullOrEmpty (login.Cookie)) {
+				if (Request.Cookies ["cookie"] != null) {
+					login.Cookie = Request.Cookies ["cookie"].Value;
+				}
+			}
+
+			login.User = Request ["user"];
+			if (string.IsNullOrEmpty (login.User)) {
+				if (Request.Cookies ["user"] != null) {
+					login.User = Request.Cookies ["user"].Value;
+				}
+			}
+
+			login.Ip4 = Request ["ip4"];
+			if (string.IsNullOrEmpty (login.Ip4)) {
+				login.Ip4 = Utilities.GetExternalIP (Request);
+			}
+			
+			return login;
+		}
+
 		private void DownloadRevisionLog (int revision_id, bool diff /* diff or log */)
 		{
 			DBRevision revision;
 
 			using (DB db = new DB ()) {
-				WebServiceLogin login = new WebServiceLogin ();
-				login.Cookie = Request ["cookie"];
-				login.User = Request ["user"];
-				login.Ip4 = Request ["ip4"];
+				WebServiceLogin login = CreateLogin ();
 
 				revision = DBRevision_Extensions.Create (db, revision_id);
 
@@ -158,10 +181,7 @@ namespace MonkeyWrench.WebServices
 			string compressed_mime;
 
 			using (DB db = new DB ()) {
-				WebServiceLogin login = new WebServiceLogin ();
-				login.Cookie = Request ["cookie"];
-				login.User = Request ["user"];
-				login.Ip4 = Request ["ip4"];
+				WebServiceLogin login = CreateLogin ();
 
 				filename = Request ["filename"];
 
